# TileSpGEMM

./: .gitignore  CMakeLists.txt
include/tilespgemm/: common.h  csr2tile.hpp  mmio.h  mmio_highlevel.hpp  nsparse_asm.cuh  spgemm-cpu.hpp  spgemm_cu.h  spgemm_nsparse_kernel.cuh  spgemm_serialref_spa_new.hpp  tile2csr.hpp  tilespgemm-cuda.cuh  utils.hpp  utils_cuda_scan.cuh
src/: Makefile  csr2tile.cpp  main.cu  mmio_highlevel.cpp  spgemm-cpu.cpp  spgemm_nsparse_kernel.cu  spgemm_serialref_spa_new.cpp  tilespgemm-cuda.cu  utils.cpp  utils_cuda_scan.cu
